--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -38,7 +38,7 @@
 <script>window.jQuery || document.write('<script src="/js/jquery.min.js"><\/script>')</script>
 
 <script src="/js/plugins.min.js"></script>
-<script src="/js/main.min.js"></script>
+<script src="/js/main.js"></script>
 <!-- /END JS-->
 
 </body>
