--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,8 +1,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=1260">
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<meta name="author" content="parapix.ru">
+<meta name="keywords" content="Победитель" />
+<meta name="description" content="Научишься хотеть большего, поймешь куда идти, добьёшься поставленных целей" />
+<meta name="author" content="Николай Воробьёв">
 
 <meta property="og:locale" content="ru_RU" />
 <meta property="og:title" content="«Победитель» онлайн-тренинг Николая Воробьёва" />
