--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -22,6 +22,16 @@
 
 <!--/noindex-->
 
+<!--[if lte IE 8]>
+<div class="notice notice--warning">
+  <div class="container">
+    <noindex>
+      Вы используете устаревший браузер! Для комфортной работы рекомендуем установить новый <b><a href="https://www.google.ru/chrome/" target="blank" title="Chrome">Chrome</a></b>.
+    </noindex>
+  </div>
+</div>
+<![endif]-->
+
 <noscript>
   <div class="notice notice--warning">
     <div class="row">
