--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,34 +1,66 @@
+/* HEADER
+---------------------------------------- */
 .header {
-  left: 0;
-  padding: 4.286em 0;
-  position: absolute;
+  padding: 4.286em 0 0;
+  //width: 100%;
+
+  position: fixed;
   top: 0;
-  width: 100%;
+  right: 0;
+  left: 0;
   z-index: 999;
-}
 
-.header__logo, .header__nav, .header__order {
-  display: inline-block;
-  vertical-align: top;
-}
+  transition: padding .2s,
+              background-color .2s;
 
-.header__nav {
-  margin-left: 4.286em;
-  padding: 1.143em 0 0;
-}
+  &__logo {
+    display: inline-block;
+    vertical-align: top;
+    margin: 0.714em 0;
+    transition: all .2s;
+  }
+  &__nav {
+    display: inline-block;
+    vertical-align: top;
+    padding: 1.143em 0 0;
+    margin-left: 4.286em;
+    transition: all .2s;
+  }
+  &__order {
+    display: inline-block;
+    vertical-align: top;
+    float: right;
+  }
 
-.header__order {
-  float: right;
+  &.sticky {
+    background-color: white;
+    box-shadow: 0 0 1.071em 0 rgba(0,0,0,.1);
+    padding: 0.714em 0;
+    .header {
+      &__logo {
+        margin: 0.571em 0 0;
+      }
+      &__nav {
+        padding-top: 0.714em;
+      }
+    }
+    .btn {
+      height: 3.333em;
+      line-height: 3.667em;
+    }
+  }
 }
 
 .logo {
-  background: url(../images/logo.png) no-repeat;
   display: inline-block;
+  width: 46px;
   height: 30px;
-  margin: 0.714em 0;
+  background: url(../images/logo.png) no-repeat;
+  background-size: cover;
   text-decoration: none;
   text-indent: -9999px;
-  width: 46px;
+
+  opacity: .8;
 }
 
 .menu-primary {
@@ -36,35 +68,37 @@
   line-height: 1;
   margin: 0 -1.071rem;
   padding: 0;
-}
+  &__item {
+    font-size: 1rem;
+    display: inline-block;
+    vertical-align: top;
+    padding-left: 0;
+    margin: 0 1.071em;
+    position: relative;
+    &::before {
+      display: none;
+    }
+    & a,
+    & span {
+      font: 400 1rem/1.5 $font;
+      display: inline-block;
+      text-decoration: none;
+      white-space: nowrap;
+      border-bottom: 2px solid transparent;
 
-.menu-primary__item {
-  display: inline-block;
-  font-size: 1rem;
-  margin: 0 1.071em;
-  padding-left: 0;
-  position: relative;
-  vertical-align: top;
-}
+      transition: all .3s ease-in-out;
 
-.menu-primary__item::before {
-  display: none;
-}
+      &:hover {
+        border-color: lighten($color-font, 70%)
+      }
+    }
+    & span {
+      cursor: default;
+    }
+    &.is-active {
+      & a {
 
-.menu-primary__item a, .menu-primary__item span {
-  border-bottom: 2px solid transparent;
-  display: inline-block;
-  font: 400 1rem/1.5"Muller", sans-serif;
-  text-decoration: none;
-  transition: all 0.3s ease-in-out;
-  webkit-transition: all 0.3s ease-in-out;
-  white-space: nowrap;
-}
-
-.menu-primary__item a:hover, .menu-primary__item span:hover {
-  border-color: #e6e6e6;
-}
-
-.menu-primary__item span {
-  cursor: default;
+      }
+    }
+  } 
 }
