--- a/_sass/_s-definition.scss
+++ b/_sass/_s-definition.scss
@@ -1,14 +1,13 @@
 .s-definition {
-  background: #f5f5f5 url(../images/b_definition.jpg) center no-repeat;
+  background: $color-back url(../images/b_definition.jpg) center no-repeat;
   background-size: cover;
-}
+  //height: 600px;
 
-.s-definition__inner {
-  border: 2px solid #f1d725;
-  font-size: 1.143em;
-  padding: 8.125em 4.375em;
-}
-
-.s-definition__inner p:last-child {
-  margin: 0;
+  &__inner {
+    font-size: 1.143em;
+    border: 2px solid $color-primary;
+    padding: 8.125em 4.375em;
+    //margin: 3.571em 0;
+    p:last-child {margin: 0;}
+  }
 }
