--- a/_sass/_s-doit.scss
+++ b/_sass/_s-doit.scss
@@ -1,7 +1,7 @@
 .s-doit {
   padding-top: 0 !important;
-}
-
-.s-doit h5 {
-  margin-bottom: 0;
+  h5 {
+    margin-bottom: 0;
+    line-height: 1.5;
+  }
 }
