--- a/_sass/_s-download.scss
+++ b/_sass/_s-download.scss
@@ -1,4 +1,4 @@
 .s-download {
-  background: #f5f5f5 url(../images/b_download.jpg) top center no-repeat;
+  background: $color-back url(../images/b_download.jpg) top center no-repeat;
   background-size: cover;
 }
