--- a/_sass/_s-features.scss
+++ b/_sass/_s-features.scss
@@ -1,51 +1,41 @@
 .s-features {
   padding-bottom: 0 !important;
-}
+  .coach {
+    &__item {
+      margin-bottom: 2.5em;
+      &-head {
+        display: flex;
+        align-items: center;
+        margin-bottom: 1.786em;
+      }
+      &-img {
+        min-width: 140px;
+        margin-right: 50px;
+        border-radius: 50%;
+      }
+      &-info {
 
-.s-features .coach__item {
-  margin-bottom: 2.5em;
-}
-
-.s-features .coach__item-head {
-  align-items: center;
-  display: flex;
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: -webkit-flex;
-  margin-bottom: 1.786em;
-  ms-flex-align: center;
-  webkit-align-items: center;
-  webkit-box-align: center;
-}
-
-.s-features .coach__item-img {
-  border-radius: 50%;
-  margin-right: 50px;
-  min-width: 140px;
-  webkit-border-radius: 50%;
-}
-
-.s-features .coach__item-title {
-  margin: 0;
-}
-
-.s-features .coach__item-post {
-  font-size: 1.286em;
-  font-style: italic;
-}
-
-.s-features .coach__item-text {
-  margin-bottom: 0.714em;
-}
-
-.s-features .coach__item-link {
-  border-bottom: 1px dashed #cfcfcf;
-  color: #999;
-  display: inline-block;
-  line-height: .9;
-  text-decoration: none;
-}
-
-.s-features .coach__item-link:hover {
-  border-color: transparent;
+      }
+      &-title {
+        margin: 0;
+      }
+      &-post {
+        font-size: 1.286em;
+        font-style: italic;
+      }
+      &-text {
+        margin-bottom: 0.714em;
+      }
+      &-link {
+        display: inline-block;
+        color: #999;
+        line-height: .9;
+        text-decoration: none;
+        border-bottom: 1px dashed #cfcfcf;
+        &:hover {
+          border-color: transparent;
+        }
+      }
+    }
+  }
 }
