--- a/_sass/_s-quote.scss
+++ b/_sass/_s-quote.scss
@@ -1,17 +1,16 @@
 .s-quote {
-  background: #f5f5f5 url(../images/b_quote-shimich.jpg) top center no-repeat;
+  background: $color-back url(../images/b_quote-shimich.jpg) top center no-repeat;
   background-size: cover;
   height: 600px;
-}
 
-.s-quote__text {
-  font-size: 2.143em;
-  font-weight: 700;
-  margin: 5em 0 0.333em 0;
-}
-
-.s-quote__sign {
-  color: #666;
-  font-size: 1.286em;
-  font-style: italic;
+  &__text {
+    font-size: 2.143em;
+    font-weight: 700;
+    margin: 5em 0 0.333em 0;
+  }
+  &__sign {
+    color: #666;
+    font-size: 1.286em;
+    font-style: italic;
+  }
 }
