--- a/_sass/_s-reviews.scss
+++ b/_sass/_s-reviews.scss
@@ -1,53 +1,46 @@
 .s-reviews {
   padding-bottom: 0 !important;
-}
+  .reviews {
+    margin-bottom: 4.286em;
+    &__item {
+      padding: 1.429em 0;
+      &-info {
+        font-style: italic;
+        padding: 1.429em 0;
+        text-align: center;
+      }
+      &-img {
+        border-radius: 50%;
+        min-width: 100%;
+      }
+      &-desc {
+        padding: 1.429em 0;
+      }
+      &-name {
 
-.s-reviews .reviews {
-  margin-bottom: 4.286em;
-}
+      }
+      &-social {
+        color: #999;
+        text-decoration: none;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
 
-.s-reviews .reviews__item {
-  padding: 1.429em 0;
-}
-
-.s-reviews .reviews__item-info {
-  font-style: italic;
-  padding: 1.429em 0;
-  text-align: center;
-}
-
-.s-reviews .reviews__item-img {
-  border-radius: 50%;
-  min-width: 100%;
-  webkit-border-radius: 50%;
-}
-
-.s-reviews .reviews__item-desc {
-  padding: 1.429em 0;
-}
-
-.s-reviews .reviews__item-social {
-  color: #999;
-  text-decoration: none;
-}
-
-.s-reviews .reviews__item-social:hover {
-  text-decoration: underline;
-}
-
-.s-reviews .reviews__item-body {
-  padding: 0 0 0 2.143em;
-}
-
-.s-reviews .reviews__item-link {
-  border-bottom: 1px dashed #cfcfcf;
-  color: #999;
-  cursor: pointer;
-  display: inline-block;
-  line-height: .9;
-  text-decoration: none;
-}
-
-.s-reviews .reviews__item-link:hover {
-  border-color: transparent;
+      &-body {
+        padding: 0 0 0 2.143em;
+      }
+      &-link {
+        display: inline-block;
+        color: #999;
+        line-height: .9;
+        text-decoration: none;
+        border-bottom: 1px dashed #cfcfcf;
+        cursor: pointer;
+        &:hover {
+          border-color: transparent;
+        }
+      }
+    }
+  }
 }
