--- a/_sass/_s-step.scss
+++ b/_sass/_s-step.scss
@@ -1,21 +1,21 @@
-.s-step h5 {
-  margin: 0;
-}
-
-.s-step .step {
-  counter-reset: step;
-}
-
-.s-step .step__item {
-  counter-increment: step;
-  margin: 4.286em 0 0;
-  padding-right: 3.214em;
-}
-
-.s-step .step__item::before {
-  color: #f1d725;
-  content: counter(step)".";
-  display: block;
-  font-size: 3.429em;
-  font-weight: 300;
+.s-step {
+  h5 {
+    margin-top: 0;
+  }
+  .step {
+    counter-reset: step;
+    &__item {
+      padding-right: 3.214em;
+      margin: 4.286em 0 0;
+      counter-increment: step;
+      &::before {
+        content: counter(step)'.';
+        display: block;
+        color: $color-primary;
+        font-size: 3.429em;
+        font-weight: 300;
+        //margin-bottom: 0.521em;
+      }
+    }
+  }
 }
