--- a/_sass/_s-student.scss
+++ b/_sass/_s-student.scss
@@ -1,67 +1,61 @@
-.student {
-  cursor: default;
-  margin-bottom: 2.857em;
-  padding-right: 2.857em;
-  padding-top: 3.571em;
-  position: relative;
-}
+.s-student {
+  overflow: hidden;
+  padding-bottom: 0 !important;
 
-.student__head {
-  margin-bottom: 1.786em;
-}
+  .student {
+    padding-top: 3.571em;
+    padding-right: 2.857em;
+    margin-bottom: 2.857em;
+    position: relative;
+    cursor: default;
+    &__head {
+      margin-bottom: 1.786em;
+    }
+    &__title {
+      font-weight: 400;
+      padding-bottom: 0.625em;
+      position: relative;
+      &::after {
+        content: '';
+        display: block;
+        background-color: $color-primary;
+        width: 70px;
+        height: 2px;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+      }
+    }
+    &__text {
+      visibility: hidden;
+      opacity: 0;
+      transform: translate(0, 0.714em);
+      transition: all 0.4s ease-in-out;
+    }
+    &::after {
+      content: '';
+      background: $color-back;
+      position: absolute;
+      top: 0;
+      right: 1.071rem;
+      bottom: 0;
+      left: 15%;
+      z-index: -1;
 
-.student__title {
-  font-weight: 400;
-  padding-bottom: 0.625em;
-  position: relative;
-}
+      visibility: hidden;
+      opacity: 0;
+      transform: translate(2.143em, 0);
+      transition: all .4s ease-in-out;
 
-.student__title::after {
-  background-color: #f1d725;
-  bottom: 0;
-  content: '';
-  display: block;
-  height: 2px;
-  left: 0;
-  position: absolute;
-  width: 70px;
-}
-
-.student__text {
-  ms-transform: translate(0, 0.714em);
-  opacity: 0;
-  transform: translate(0, 0.714em);
-  transition: all 0.4s ease-in-out;
-  visibility: hidden;
-  webkit-transform: translate(0, 0.714em);
-  webkit-transition: all 0.4s ease-in-out;
-}
-
-.student::after {
-  background: #f5f5f5;
-  bottom: 0;
-  content: '';
-  left: 15%;
-  ms-transform: translate(2.143em, 0);
-  opacity: 0;
-  position: absolute;
-  right: 1.071rem;
-  top: 0;
-  transform: translate(2.143em, 0);
-  transition: all 0.4s ease-in-out;
-  visibility: hidden;
-  webkit-transform: translate(2.143em, 0);
-  webkit-transition: all 0.4s ease-in-out;
-  z-index: -1;
-}
-
-.student.is-active .student__text,
-.student.is-active::after,
-.student:hover .student__text,
-.student:hover::after {
-  ms-transform: translate(0);
-  opacity: 1;
-  transform: translate(0);
-  visibility: visible;
-  webkit-transform: translate(0);
+    }
+    &.is-active,
+    &:hover {
+      & .student__text,
+      &::after {
+        visibility: visible;
+        opacity: 1;
+        transform: translate(0);
+      }
+    }
+  }
 }
