--- a/_sass/lib/_mixins.scss
+++ b/_sass/lib/_mixins.scss
@@ -43,6 +43,12 @@
   }
 }
 
+@mixin transform($val) {
+  -webkit-transform: $val;
+  -moz-transform: $val;
+  -ms-transform: $val;
+  transform: $val;
+}
 
 /* FLEX
 ----------------------------------------------------------------------*/
@@ -96,6 +102,11 @@
   -moz-flex-wrap: $inner;
   -ms-flex-wrap: $inner;
   flex-wrap: $inner;
+}
+
+@mixin justify-content($justify) {
+  -webkit-justify-content: $justify;
+  justify-content: $justify;
 }
 
 /* MEDIA
