--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -94,7 +94,7 @@
     text-align: center;
     &::after {
       left: 50%;
-      transform: translate(-50%, 0);
+      @include transform(translate(-50%, 0));
     }
   }
 
@@ -150,4 +150,9 @@
       background-position: -48px 0 !important;
     }
   }
+}
+
+.row {
+  /* safari fix */
+  display: -webkit-flex;
 }
