--- a/_sass/_s-main.scss
+++ b/_sass/_s-main.scss
@@ -6,9 +6,9 @@
     min-height: 750px;
   }
   &__inner {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    @include flexbox;
+    @include flex-direction(column);
+    @include justify-content(center);
     min-height: 640px;
   }
   &__title {
