--- a/_sass/_s-student.scss
+++ b/_sass/_s-student.scss
@@ -29,7 +29,7 @@
     &__text {
       visibility: hidden;
       opacity: 0;
-      transform: translate(0, 0.714em);
+      @include transform(translate(0, 0.714em));
       transition: all 0.4s ease-in-out;
     }
     &::after {
@@ -44,7 +44,7 @@
 
       visibility: hidden;
       opacity: 0;
-      transform: translate(2.143em, 0);
+      @include transform(translate(2.143em, 0));
       transition: all .4s ease-in-out;
 
     }
@@ -54,7 +54,7 @@
       &::after {
         visibility: visible;
         opacity: 1;
-        transform: translate(0);
+        @include transform(translate(0));
       }
     }
   }
