сиськи Ланы перестали вытягиваться по вертикали

--- a/_sass/_s-goals.scss
+++ b/_sass/_s-goals.scss
@@ -14,7 +14,7 @@
         background: $color-primary;
         padding: 2.500em;
         padding-right: 5em;
-        display: flex;
+        //display: flex;
         align-items: center;
         margin: 0 6px;
         height: 253px;
